--- a/index.html
+++ b/index.html
@@ -3,100 +3,37 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Venyou Solutions</title>
+  <title>Venyou Solutions - Coming Soon</title>
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
 
-  <!-- Google Font: Archivo -->
-  <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@200;300;400;700;900&display=swap" rel="stylesheet">
+  <!-- Archivo Font -->
+  <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700;800&display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-
-<!-- =================== NAV =================== -->
-<header class="nav">
-  <div class="logo">ven<span>you</span> Solutions</div>
-
-  <nav class="nav-links">
-    <a href="#about">About</a>
-    <a href="#services">Services</a>
-    <a href="#contact" class="cta">Contact</a>
-  </nav>
-
-  <div class="mobile-menu-btn" id="menuBtn">
-    <div class="bar"></div>
-    <div class="bar"></div>
-    <div class="bar"></div>
+  <div class="coming-soon-container">
+    <h1 class="logo" aria-label="Venyou Solutions">
+      <span class="letter">v</span>
+      <span class="letter">e</span>
+      <span class="letter">n</span>
+      <span class="letter">y</span>
+      <span class="letter">o</span>
+      <span class="letter">u</span>
+      <span class="letter"> </span>
+      <span class="letter">S</span>
+      <span class="letter">o</span>
+      <span class="letter">l</span>
+      <span class="letter">u</span>
+      <span class="letter">t</span>
+      <span class="letter">i</span>
+      <span class="letter">o</span>
+      <span class="letter">n</span>
+      <span class="letter">s</span>
+    </h1>
+    <p class="sub-text">Coming Soon</p>
   </div>
 
-  <nav class="mobile-nav" id="mobileNav">
-    <a href="#about">About</a>
-    <a href="#services">Services</a>
-    <a href="#contact">Contact</a>
-  </nav>
-</header>
-
-<!-- BG PARALLAX GRADIENT -->
-<div class="bg-gradient"></div>
-
-<!-- =================== HERO =================== -->
-<section class="hero fade-in">
-  <h1 class="hero-title">Facility Management & Production Services</h1>
-  <p class="hero-sub">Smart solutions for landlords, venues, and organizations.</p>
-  <a href="#contact" class="primary-btn">Get Started</a>
-</section>
-
-<!-- =================== ABOUT =================== -->
-<section id="about" class="section fade-in">
-  <h2 class="section-title">About Venyou Solutions</h2>
-  <p class="center-text">
-    We help landlords activate their spaces, streamline operations,
-    and improve how venues are rented, managed, and maintained.
-  </p>
-
-  <div class="image-row">
-    <div class="img-box"></div>
-    <div class="img-box"></div>
-    <div class="img-box"></div>
-  </div>
-</section>
-
-<!-- =================== SERVICES =================== -->
-<section id="services" class="section fade-in">
-  <h2 class="section-title">What We Do</h2>
-
-  <div class="service-grid">
-    <div class="service-card">
-      <div class="img-box tall"></div>
-      <h3>Event Rental Management</h3>
-      <p>We connect groups, coordinators, and organizations to your space.</p>
-    </div>
-
-    <div class="service-card">
-      <div class="img-box tall"></div>
-      <h3>Facility Oversight</h3>
-      <p>Daily operations, coordination, and proactive space management.</p>
-    </div>
-
-    <div class="service-card">
-      <div class="img-box tall"></div>
-      <h3>AVL & Production Support</h3>
-      <p>Professional lighting, sound, and stage support for your venue.</p>
-    </div>
-  </div>
-</section>
-
-<!-- =================== CONTACT =================== -->
-<section id="contact" class="section fade-in">
-  <h2 class="section-title">Let’s Talk About Your Space</h2>
-
-  <form class="contact-form" action="https://formspree.io/f/your-id-here" method="POST">
-    <input type="text" name="name" placeholder="Your Name" required>
-    <input type="email" name="email" placeholder="Your Email" required>
-    <textarea name="message" placeholder="Tell us about your space..." required></textarea>
-    <button type="submit">Send</button>
-  </form>
-</section>
-
-<script src="script.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
