--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" /> 
+  <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Venyou Solutions - Coming Soon</title>
   <link rel="icon" href="favicon.ico" type="image/x-icon">
@@ -9,28 +9,11 @@
   <!-- Archivo Font -->
   <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700;800&display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="coming-soon-container">
-    <h1 class="logo" aria-label="Venyou Solutions">
-      <span class="letter">v</span>
-      <span class="letter">e</span>
-      <span class="letter">n</span>
-      <span class="letter">y</span>
-      <span class="letter">o</span>
-      <span class="letter">u</span>
-      <span class="letter"> </span>
-      <span class="letter">S</span>
-      <span class="letter">o</span>
-      <span class="letter">l</span>
-      <span class="letter">u</span>
-      <span class="letter">t</span>
-      <span class="letter">i</span>
-      <span class="letter">o</span>
-      <span class="letter">n</span>
-      <span class="letter">s</span>
-    </h1>
+    <h1 class="logo" id="logo">Venyou Solutions</h1>
     <p class="sub-text">Coming Soon</p>
   </div>
 
