--- a/index.html
+++ b/index.html
@@ -1,22 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Venyou Solutions - Coming Soon</title>
   <link rel="icon" href="favicon.ico" type="image/x-icon">
 
-  <!-- Archivo Font -->
+  <!-- Google Font -->
   <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700;800&display=swap" rel="stylesheet">
 
+  <!-- Stylesheet -->
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
   <div class="coming-soon-container">
     <h1 class="logo" id="logo">Venyou Solutions</h1>
     <p class="sub-text">Coming Soon</p>
   </div>
 
+  <!-- Script -->
   <script src="script.js"></script>
 </body>
 </html>
