--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
 <body>
 
   <div class="coming-soon-container">
-    <h1 class="logo" id="logo">Venyou Solutions</h1>
+    <h1 class="logo">
+      <span class="logo-main" id="logo-main">venyou</span>
+      <span class="logo-sub" id="logo-sub">SOLUTIONS</span>
+    </h1>
     <p class="sub-text">Coming Soon</p>
   </div>
 
